<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_photo_guide"
        android:orderInCategory="10"
        android:title="@string/action_photo_guide"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update_gps"
        android:orderInCategory="20"
        android:title="@string/action_update_gps"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_terms_license"
        android:orderInCategory="30"
        android:title="@string/action_terms_license"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>