<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/conditionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/condicion"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@android:color/darker_gray" />
</LinearLayout>